# batch_jaro_winkler

./: .gitignore  .travis.yml  LICENSE  README.md
benchmark/: benchmark.py  benchmark.rb  install_ruby_dependencies.rb  requirements.txt
benchmark/.plot/: bjw_times.py  plot.py
lib/: LICENSE.uthash.txt  batch_jaro_winkler.c  batch_jaro_winkler.h  batch_jaro_winkler_runtime.h
ocaml/: .travis-ocaml.sh
ocaml/lib/: batch_jaro_winkler.ml  batch_jaro_winkler.mli  batch_jaro_winkler.opam  batch_jaro_winkler_stubs.c  dune  dune-project  local_build.sh
ocaml/lib/ext/: batch_jaro_winkler.c  batch_jaro_winkler_internal.h  batch_jaro_winkler_runtime.h  uthash.h
ocaml/test/: dune  test.ml  test_behavior.ml
python/: MANIFEST.in  README.md  cbatch_jaro_winkler.c  cbatch_jaro_winkler.pyx  cbatch_jaro_winkler_headers.pxd  cython_build.py  cython_build.sh  dev-requirements.txt  local_build.sh  publish.sh  publish.txt  pyproject.toml  setup.cfg  setup.py
python/batch_jaro_winkler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/test/: requirements.txt  test_behavior.py  test_correctness.py
ruby/: batch_jaro_winkler.gemspec  local_build.sh  publish.sh
ruby/ext/batch_jaro_winkler/: batch_jaro_winkler.c  extconf.rb
ruby/lib/: batch_jaro_winkler.rb
ruby/lib/batch_jaro_winkler/: version.rb
ruby/test/: install_dependencies.sh  test_behavior.rb  test_correctness.rb
