[project]
name = "batch_jaro_winkler"
version = "0.1.6"
description = "Fast batch jaro winkler distance implementation in C99."
authors = [{ name = "Dominik Bousquet", email = "bousquet.dominik@gmail.com" }]
readme = "README.md"
license = { text = "MIT License" }
keywords = ["fuzzy", "matching", "fuzzy matching", "jaro", "winkler", "jaro winkler"]
requires-python = ">=3.3"
dependencies = []

[project.urls]
Homepage = "https://github.com/dbousque/batch_jaro_winkler"

[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"
