opam-version: "2.0"
name: "batch_jaro_winkler"
version: "0.1.3"
maintainer: "Dominik Bousquet <bousquet.dominik@gmail.com>"
authors: [ "Dominik Bousquet" ]
license: "MIT"
homepage: "https://github.com/dbousque/batch_jaro_winkler"
dev-repo: "git://github.com/dbousque/batch_jaro_winkler.git"
bug-reports: "https://github.com/dbousque/batch_jaro_winkler/issues"
synopsis: "Fast batch jaro winkler distance implementation in C99"
description: """
This project gets its performance from the pre-calculation of an optimized
model in advance of the actual runtime calculations. Supports any encoding.
"""

build: [
  ["dune" "build" "--only-packages" name "--profile" "release" "--default-target" "@install" "-j" jobs "--root=./ocaml/lib"]
]

depends: [
  "ocaml" {>= "4.00.0"}
  "dune" {>= "2.5"}
]
